you clicked element 3

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>CRACKING THE CW</title>
+  <title>JS Bin</title>
 </head>
 <body>
-
-<script src="js.js"></script>
+  <button>test1</button>
+  <button>test2</button>
+  <button>test3</button>
 </body>
+<script src="js.js"></script>
 </html>
